# Game-of-Life

./: CMakeLists.txt  Cell.cpp  Cell.h  README.md  Simulation.cpp  Simulation.h  main.cpp
